tests/baselines/reference/generatorInAmbientContext4.d.errors.txt
generatorInAmbientContext4.d.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
generatorInAmbientContext4.d.ts(2,14): error TS1221: Generators are not allowed in an ambient context.


==== generatorInAmbientContext4.d.ts (2 errors) ====
    declare module M {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        function *generator(): any;
                 ~
!!! error TS1221: Generators are not allowed in an ambient context.
    }